--- a/TestGUI/TestGUI/App.xaml
+++ b/TestGUI/TestGUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TestGUI.App"
+﻿<Application x:Class="CoreCVandUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TestGUI"
+             xmlns:local="clr-namespace:CoreCVandUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
