--- a/TestGUI/TestGUI/Loading.xaml
+++ b/TestGUI/TestGUI/Loading.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="CoreCVandUI.Authorize"
+﻿<Window x:Class="CoreCVandUI.Loading"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoreCVandUI"
         mc:Ignorable="d"
-        Title="Authorize">
-    <Grid>
-        <WebBrowser x:Name="wb1" Margin="10" LoadCompleted="wb1_LoadCompleted"/>
+        Title="Loading" Height="78.261" Width="440.87" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Cursor="Wait">
+    <Grid Margin="0,0,0,37">
+        <ProgressBar Height="25" Margin="10,0,10,-23" VerticalAlignment="Bottom" IsIndeterminate="True"/>
 
     </Grid>
 </Window>
